[gd_scene load_steps=20 format=2]

[ext_resource path="res://visuals/objects/boxExplosive.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters_overlay/bomb.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 21 )

[sub_resource type="CircleShape2D" id=2]
radius = 324.006

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.580972, 0.866397, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.00163248, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.103399, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.412539, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 76.64
gravity = Vector3( 0, 98, 0 )
initial_velocity = 229.41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 6.8
scale = 7.83
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.0647773, 0.253036, 0.595142, 1 )
colors = PoolColorArray( 0.955664, 0, 0, 1, 0.959883, 0.487313, 0.0951417, 1, 0.877539, 0.72767, 0.00359861, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0265941, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 25, 25, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 31.25
angular_velocity = 67.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 150.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 19 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BoxExplosive:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BoxExplosive:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "blink"
length = 4.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BoxExplosive:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.25, 2.5, 2.75, 3, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "explosion"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BoxExplosive:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 3, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BoxExplosive:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001

[sub_resource type="Animation" id=6]
resource_name = "explode"
length = 6.0
step = 0.05
tracks/0/type = "animation"
tracks/0/path = NodePath("AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "blink" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "explosion" ),
"times": PoolRealArray( 4.05 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "explosion_push"
} ]
}

[node name="Bomb" type="RigidBody2D"]
mass = 10.0
gravity_scale = 3.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="BoxExplosive" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 56
lifetime = 2.5
one_shot = true
explosiveness = 0.85
local_coords = false
process_material = SubResource( 8 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 0.85
process_material = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/blink = SubResource( 4 )
anims/explosion = SubResource( 7 )

[node name="MainAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/explode = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="animation_finished" from="MainAnim" to="." method="_on_MainAnim_animation_finished"]
